--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -7,8 +7,8 @@
         <h1>Newbie</h1>
         <p>youtube video<iframe width="560" height="315" src="https://www.youtube.com/embed/JGwWNGJdvx8?ecver=1" frameborder="0" allowfullscreen></iframe>
         <p>google map<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d172133.4264451229!2d-122.47598897314188!3d47.6147627837301!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5490102c93e83355%3A0x102565466944d59a!2sSeattle%2C+WA!5e0!3m2!1sen!2sus!4v1490829946468" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-        <p>photo<<img style="-webkit-user-select: none;background-position: 0px 0px, 10px 10px;background-size: 20px 20px;background-color: white;background-image:linear-gradient(45deg, #eee 25%, transparent 25%, transparent 75%, #eee 75%, #eee 100%),linear-gradient(45deg, #eee 25%, transparent 25%, transparent 75%, #eee 75%, #eee 100%);cursor: zoom-out;" src="https://images-na.ssl-images-amazon.com/images/G/01/img15/pet-products/small-tiles/23695_pets_vertical_store_dogs_small_tile_8._CB312176604_.jpg" width="593" height="305">
-
+        <p>photo <img src="https://images-na.ssl-images-amazon.com/images/G/01/img15/pet-products/small-tiles/23695_pets_vertical_store_dogs_small_tile_8._CB312176604_.jpg">
+      
         <h1>Apprentice</h1>
         <p>youtube video at 3 min<iframe width="560" height="315" src="https://www.youtube.com/embed/JGwWNGJdvx8?ecver=1?start=180" frameborder="0" allowfullscreen></iframe>
         <p>video that plays with HTML5
