--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -10,7 +10,7 @@
         <p>photo <img src="https://images-na.ssl-images-amazon.com/images/G/01/img15/pet-products/small-tiles/23695_pets_vertical_store_dogs_small_tile_8._CB312176604_.jpg">
       
         <h1>Apprentice</h1>
-        <p>youtube at 3 min<iframe width="560" height="315" src="https://www.youtube.com/embed/JGwWNGJdvx8?start=180" frameborder="0" allowfullscreen></iframe>
+        <p>youtube at 3 min<iframe width="560" height="315" src="https://www.youtube.com/embed/JGwWNGJdvx8?t=3m" frameborder="0" allowfullscreen></iframe>
         <p>video that plays with HTML5
     </body>
 </html>
