--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -10,7 +10,7 @@
         <p>photo <img src="https://images-na.ssl-images-amazon.com/images/G/01/img15/pet-products/small-tiles/23695_pets_vertical_store_dogs_small_tile_8._CB312176604_.jpg">
       
         <h1>Apprentice</h1>
-        <p>video that starts at 3 min<object width="640" height="385"><param name="movie" value="http://www.youtube.com/v/PjDw3azfZWI&hl=en_US&start=180"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/PjDw3azfZWI&hl=en_US&start=180" type="application/x-shockwave-flash" allowscriptaccess="always" width="640" height="385"></embed></object>
+        <p>video starts at 3 min<iframe width="560" height="315" src="https://www.youtube.com/embed/JGwWNGJdvx8?start=180" frameborder="0" allowfullscreen></iframe>
         <p>video that plays with HTML5
     </body>
 </html>
