--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -12,5 +12,15 @@
         <h1>Apprentice</h1>
         <p>video starts at 3 min<iframe width="560" height="315" src="https://www.youtube.com/embed/JGwWNGJdvx8?start=180" frameborder="0" allowfullscreen></iframe>
         <p>video that plays with HTML5
+            <video width="400" controls>
+                <source src="mov_bbb.mp4" 
+            type="video/mp4">
+                 <source src="mov_bbb.ogg" 
+            type="video/ogg">
+            Your browser does not support HTML5 video.
+        </video>
+        <p>
+        Video courtesy of <a href="https://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny</a>.
+        </p>
     </body>
 </html>
