--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -12,7 +12,10 @@
         <h1>Apprentice</h1>
         <p>video starts at 3 min<iframe width="560" height="315" src="https://www.youtube.com/embed/JGwWNGJdvx8?start=180" frameborder="0" allowfullscreen></iframe>
         <p>video that plays with HTML5
-            <video src="video.wemb" controls>
+            <video width="640" height "480" controls>
+                    <source src="movie.mp4" type="video/mp4">
             </video>
-    </body>
+        <p>something using the object tag
+            <object width="400" height="400" data="object.pdf"></object>
+
 </html>
