--- a/tags.html
+++ b/tags.html
@@ -5,10 +5,10 @@
     </head>
     <body>
         <h1>Aiva Petriceks</h1>
-        <h2>About Me</h2>
+        <h2 style="background-color:cyan">About Me</h2>
         <p>I was born and raised in Palo Alto, California
         <p>I have two older siblings, Paula and Aldis
-        <h2>My Favorite sites
+        <h2 style="background-color:yellow">My Favorite sites
         <ul>
     <li><a href="https://www.youtube.com/">Youtube</a></li>
     <li><a href="http://www.boredpanda.com/cute-baby-animals/">Cute animals</a></li>
@@ -16,7 +16,7 @@
     <li><a href="https://www.buzzfeed.com/">Buzzfeed</a></li>
     <li><a href="https://www.instagram.com/">Instagram</a></li>
 </ul>
-        <h2>My favorite pictures
+        <h2 style="background-color:blue">My favorite pictures
         <h3><p>Red Panda <a href="https://i.ytimg.com/vi/b6dT4kyVUuY/maxresdefault.jpg"> 
                             <img src="https://i.ytimg.com/vi/b6dT4kyVUuY/maxresdefault.jpg" title="red panda" style="width:100px;height:100px;margin:5px"
                         </a>  
